--- a/index.html
+++ b/index.html
@@ -120,16 +120,10 @@
       <div class="footer-wrapper">
         <div class="footer-banner">
           <h2>Download the app now.</h2>
-          <h4 class="text-ld">Available on your favorite store. Start your premium experience now</h4>
-          <h4 class="text-md">Most calendars are
-            designed for teams. </h4>
-          <div class="btn-wrapper for-ld">
+          <h4>Available on your favorite store. Start your premium experience now</h4>
+          <div class="btn-wrapper">
             <button class="btn btn-primary">Play store</button>
             <button class="btn btn-outline-primary">App store</button>
-          </div>
-          <div class="btn-wrapper for-sd">
-            <button class="btn btn-primary">Buy now</button>
-            <button class="btn btn-outline-primary">Try for free</button>
           </div>
         </div>
         <div class="footer">
